removing text-decoration on footer's Quick Links

--- a/index.html
+++ b/index.html
@@ -722,13 +722,13 @@
                         Quick Links
                       </h6>
                       <p>
-                        <a onclick="goto('home');" class="text-reset">Home</a>
+                        <a onclick="goto('home');" class="text-reset text-decoration-none">Home</a>
                       </p>
                       <p>
-                        <a onclick="goto('about');" class="text-reset">About Us</a>
+                        <a onclick="goto('about');" class="text-reset text-decoration-none">About Us</a>
                       </p>
                       <p>
-                        <a onclick="goto('products');" class="text-reset">Products</a>
+                        <a onclick="goto('products');" class="text-reset text-decoration-none">Products</a>
                       </p>
                     </div>
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
