--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <script src="https://kit.fontawesome.com/3ab26b6439.js" crossorigin="anonymous"></script>
     </head>
     <body data-bs-spy="scroll" data-bs-target="#navbar" class="scrollspy-example">
-            <nav class="container-fluid navbar navbar-expand-lg bar mx-0 px-0 fixed-top nav-unscrolled w-100" id="navbar">
+            <nav class="container-fluid navbar navbar-expand-lg bar mx-0 px-0 nav-unscrolled w-100" id="navbar">
               <div class="container">
                 <img src="assets/logo.jpg" width="70" height="70" class="logo img-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -584,7 +584,7 @@
                     <p>Pertanyaan yang sering ditanyakan.</p>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-center gap-5 align-items-center">
-                    <div class="d-flex d-md-block justify-content-center px-5">
+                    <div class="d-flex d-md-block justify-content-center">
                         <img src="assets/wonton.jpg" height="225">
                     </div>
                 <div class="FAQ-body d-none d-md-block w-50">
