changing testimonial title to Our testimonial and changed the color

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             </section>
          <section class="mb-5" id="testimonials" data-aos="fade-up" data-aos-duration="700">
              <div class="testimoni-header">
-                <h1>Testimonial</h1>
+                <h1>Our <span style="color: gold;">Testimonials</span></h1>
                 <p>From our beloved customers.</p>
              </div>
              <div id="carouselExampleIndicators" class="carousel slide d-none d-md-flex">
