changed color in contact us section

--- a/index.html
+++ b/index.html
@@ -674,8 +674,8 @@
              <div id="contacts" class="w-75 mx-auto">
                 <div class="contactus d-block mx-auto mx-md-0 d-md-flex">
                     <div class="contactus1 col-md-8 col-lg-9 px-3">
-                        <h1 class="text-center text-md-start fs-1">Contact us</h1>
-                        <p class="text-center text-md-start">Curious about what we can do for you? Contact us now and start enjoying extraordinary meals!</p>
+                        <h1 class="text-center text-md-start fs-1">Contact <span style="color: gold;">us</span></h1>
+                        <p class="text-center text-md-start text-dark" style="--bs-text-opacity: .9;">Curious about what we can do for you? Contact us now and start enjoying extraordinary meals!</p>
                     </div>
                     <div class="contactus2 col-md-4 col-lg-3">
                         <button class="btn btn-warning whatsapp-btn p-3">
