changing product card color

--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
                     <div class="card col-sm-5 col-md-3 product-card" data-aos="fade-up" data-aos-duration="700" style="transition: all 0.5s ease;">
                       <img src="assets/pangsit.jpg" class="card-img-top" alt="...">
                       <div class="card-body products-body">
-                        <h5 class="card-title">Wonton Rebus Spicy</h5>
-                        <p class="product-desc">Wonton rebus isi daging giling dilapisi kulit pangsit serta ditambah dengan minyak cabai yang pedas</p>
-                        <button class="btn text-light btn-see-more" style="background-color: #3E2723;" data-bs-toggle="modal" data-bs-target="#exampleModalRebus">See more</button>
-                        <hr class="product-card-separator">
+                        <h5 class="card-title text-light">Wonton Rebus Spicy</h5>
+                        <p class="product-desc text-light">Wonton rebus isi daging giling dilapisi kulit pangsit serta ditambah dengan minyak cabai yang pedas</p>
+                        <button class="btn btn-see-more" style="background-color: gold;" data-bs-toggle="modal" data-bs-target="#exampleModalRebus">See more</button>
+                        <hr class="product-card-separator bg-light">
                       </div>
                     </div>
                     <div class="modal fade" id="exampleModalRebus" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" >
@@ -178,10 +178,10 @@
                     <div class="card col-sm-5 col-md-3 product-card" data-aos="fade-up" data-aos-duration="700" style="transition: all 0.5s ease;">
                       <img src="assets/dumpling.jpg" class="card-img-top" alt="...">
                       <div class="card-body products-body">
-                        <h5 class="card-title">Wonton Goreng Chili Oil</h5>
-                        <p class="card-text product-desc">Wonton goreng isi daging giling dilapisi kulit pangsit serta ditambah dengan minyak cabai yang pedas</p>
-                        <button class="btn text-light btn-see-more" style="background-color: #3E2723;" data-bs-toggle="modal" data-bs-target="#exampleModalGoreng">See more</button>
-                        <hr class="product-card-separator">
+                        <h5 class="card-title text-light">Wonton Goreng Chili Oil</h5>
+                        <p class="card-text product-desc text-light">Wonton goreng isi daging giling dilapisi kulit pangsit serta ditambah dengan minyak cabai yang pedas</p>
+                        <button class="btn btn-see-more" style="background-color: gold;" data-bs-toggle="modal" data-bs-target="#exampleModalGoreng">See more</button>
+                        <hr class="product-card-separator bg-light">
                       </div>
                     </div>
                         <div class="modal fade" id="exampleModalGoreng" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -225,10 +225,10 @@
                     <div class="card col-sm-5 col-md-3 product-card" data-aos="fade-up" data-aos-duration="700" style="transition: all 0.5s ease;">
                       <img src="assets/ciryam.jpg" class="card-img-top" alt="...">
                       <div class="card-body products-body">
-                        <h5 class="card-title">Cireng ayam</h5>
-                        <p class="product-desc">Cireng Ayam dengan isian ayam berbumbu gurih. Renyah di luar, kenyal di dalam.</p>
-                        <button class="btn text-light btn-see-more" style="background-color: #3E2723;" data-bs-toggle="modal" data-bs-target="#exampleModalCiryam">See more</button>
-                        <hr class="product-card-separator">
+                        <h5 class="card-title text-light">Cireng ayam</h5>
+                        <p class="product-desc text-light">Cireng Ayam dengan isian ayam berbumbu gurih. Renyah di luar, kenyal di dalam.</p>
+                        <button class="btn btn-see-more" style="background-color: gold;" data-bs-toggle="modal" data-bs-target="#exampleModalCiryam">See more</button>
+                        <hr class="product-card-separator bg-light">
                       </div>
                     </div>
                     <div class="modal fade" id="exampleModalCiryam" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" >
